# Spark_Exam_redo

./: LICENSE  MANIFEST.in  README.md  README.rst  requirments.txt  setup.cfg  setup.py  tox.ini
data/: account_data.txt  address_data.txt  customer_data.txt
data/output.parquet/: .part-00000-164e172d-36bd-4763-a1e2-f73c00e04c02-c000.snappy.parquet.crc  part-00000-164e172d-36bd-4763-a1e2-f73c00e04c02-c000.snappy.parquet
docs/: Makefile  pseudocode.txt
examples/: examples.py
src/Spark_Exam/: CustomerAccount.py  Schema.py  main.py  parse_address.py
tests/: test_parse_address.py
