#The setup.py, setup.cfg and MANIFEST.in files are used to specify how a package should be installed.

[metadata]
name = Spark_Exam # Program name 
version = 0.0.0 # version on the program 
license = MIT.  # Tyope of licence 
description = Spark Exam # discription fo the project 
long_description = file: README.rst #requests to check the README.rst for more infomation 
author = Jason Papillaud  # Name of project creatror 
author_email = jason.papillaud@gmail.com # email address of creator 
classifiers =  #??????

[options]
packages = find:    #????
package_dir = #???
    =src #???
include_package_data = True.  #????
install_requires =  # install dependencies such as pip(package manager) installs need 

[optinos.packages.find]
where = src      #?????